deployments/yaml/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: deployment-demo
  labels:
    app: frontend
spec:
  containers:
  - name: Frontend
    image: crackitty/demo-frontend:v1
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    ports:
    - containerPort:  80
      name:  http
