deployments/yaml/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: deployment-demo
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image:  crackitty/demo-backend:v1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
          name: public
          protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: colour-service
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: public
      protocol: TCP
      port: 80
      targetPort: public
