deployments/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-localhost
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: frontend-service
          servicePort: 80
      - path: /colour
        pathType: Prefix
        backend:
          serviceName: colour-service
          servicePort: 80
